ncc/testsuite/positive/Bugs/bug-1144.n
using System.Console;

module Program {

    public Main() : void {
        def f(_) { true }
        match([], 0) {
            | ([_], _) => ()
            | (_, x) when f(x) => WriteLine("OK");
            | _ => ()
        }

        def f(x) { x == 0 }
        match([], 0) {
            | ([_], _) => ()
            | (_, x) when f(x) => WriteLine("OK"); // <-- ICE
            | _ => ()
        }
    }
}
/*
BEGIN-OUTPUT
OK
OK
END-OUTPUT
*/