ncc/testsuite/negative/bug-1191.n
namespace ICE
{
  public interface IFooable
  {
    Foo() : void
  }

  public interface IBarable
  {
    Bar() : void
  }


  public class First : IFooable, IBarable
  {
    public Foo() : void { }
    public Bar() : void { }
  }

  public class Second : IFooable, IBarable
  {
    public Foo() : void { }
    public Bar() : void { }
  }

  public module Program
  {
    Main() : void
    {
      mutable f = null; //E: The intersection of types has detect

      // you can insert any boolean property here
      match (System.Diagnostics.Debugger.IsAttached)
      {
        | true  => f = First();
        | false => f = Second();
      }
    }
  }
} 
